    o id_testu, w którym występują kryteria z danego pseudokryterium
  - zmiana sposobu wyliczania zmiennych numer_pytania i numer_kryterium
    dla pseudokryteriów oceny - obecnie są one obliczane w locie na podstawie
    danych pytan/kryteriów oceny wchodzących w skład danego pseudokryterium
    (wcześnie były wycinane z opisu pseudokryterium)
- Zmiany w grupie danych "parametry":
  - dodadnie zmiennej "grupa" opisującej grupę w modelu wielogrupowym
  - dodanie funkcji pomocniczej oblicz_informacje_kryterium()
- Zmiany w grupie danych "oszacowania":
  - dodadnie zmiennej "grupa" opisującej grupę w modelu wielogrupowym
- Zmiany techniczne:
  - wstawienie zapytań pobierających dane z bazy z funkcji pobierz_parametry()
    i pobierz_kryteria_oceny() do bazy (schemat widoki)
    
--------------------
Zmiany w ZPD 1.2.2 (2015-05-31)

- Zmiany w grupie danych "skale":
  - dodanie parametru "PvEap" do funkcji pobierz_skale(), który umożliwia
    pobranie skal bez sprawdzania, czy mają oszacowania PV/EAP
    dzięki czemu pobieranie skal zajmuje bez porównania mniej czasu

--------------------
Zmiany w ZPD 1.2.1 (2015-05-28)

- Zmiany w grupie danych "testy":
  - dodanie zmiennej "prefiks"

--------------------
Zmiany w ZPD 1.2.0 (2015-05-18)

- Dodanie funkcji zastosuj_skale() umożliwiającej zastosowanie skali na
  dowolnych danych

--------------------
Zmiany w ZPD 1.1.7 (2015-04-28)

- Zmiany w grupie danych "skale"
  - usunięcie zmiennej "nazwa_skali" - dostosowanie do zmiany w strukturze bazy
    danych

--------------------
Zmiany w ZPD 1.1.6 (2015-04-08)

- Zmiany w grupie danych "kryteriaOceny":
  - pobierane są również informacje o pseudokryteriach oceny
    (bez przydziału do testów, bo w ich wypadku nie ma to sensu, ale np.
    razem z maksymalną liczbą punktów)


--------------------
Zmiany w ZPD 1.1.5 (2015-03-23)

- Zmiany w funkcji normy_ekwikwantylowe():
  - zmiana nazwy parametru "sr" na "srednia", aby uniknąć konfliktu z partial